@@ -1,12 +1,10 @@
-# $XdotOrg: $
+# $Id$
 
 AM_CFLAGS = $(XEVIE_CFLAGS) $(X_CFLAGS)
 
-SUBDIRS = src
+SUBDIRS = src man
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = xevie.pc
-
-dist_man3_MANS = man/Xevie.man
 
 EXTRA_DIST = xevie.pc.in autogen.sh
