@@ -1,0 +1,4 @@
+Makefile
+Makefile.in
+*.3
+*.3x
