@@ -1,3 +1,11 @@
+2005-10-12  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* configure.ac:
+	* Makefile.am:
+	* man/Makefile.am: 
+	Use sed to put version number in man page
+	Add shadow man pages for man pages that document multiple functions.
+
 2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* Makefile.am:
